[package]
name = "lachesis"
version = "0.3.0"
authors = ["Michele Federici (@ps1dr3x) <michele@federici.tech>"]
edition = "2018"

[dependencies]
easy_reader = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_derive = "1.0.219"
regex = "1.11"
unindent = "0.2"
semver = "1.0.24"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "io-util", "net", "sync", "time"] }
reqwest = { version = "0.12", features = ["native-tls", "http2"] }
http = "1"
indicatif = "0.17"
colored = "2.2"
ipnet = "2.10"
validator = { version = "0.19", features = ["derive"] }
rocket = { git = "https://github.com/SergioBenitez/Rocket", features = ["json"] }
tokio-postgres = "0.7.12"
clap = { version = "4.5", features = ["derive"] }

